@@ -278,9 +278,9 @@ function pts_version_codenames()
 		);
 }
 
-pts_define('PTS_VERSION', '9.4.0m1');
-pts_define('PTS_CORE_VERSION', 9310);
-pts_define('PTS_RELEASE_DATE', '20200113');
+pts_define('PTS_VERSION', '9.4.0m2');
+pts_define('PTS_CORE_VERSION', 9320);
+pts_define('PTS_RELEASE_DATE', '20200205');
 pts_define('PTS_CODENAME', 'Vestby');
 
 pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && strstr(PTS_MODE, 'CLIENT') !== false));
